# unclarity

./: README.md  UNCLARITY.md
.github/workflows/: clarity-canary.yml  sync-upstream.yml  unclarity-ci.yml
python/: .gitignore  pyproject.toml
python/src/unclarity/: __init__.py  _locate.py  client.py  device.py  scenario.py
python/tests/: test_client.py  test_parity.py
schemas/: run-request.schema.json  scenario.schema.json
unclarity-packages/: biome.json
unclarity-packages/capture/: package-lock.json  package.json  tsconfig.json
unclarity-packages/capture/src/: capture.ts  index.ts
unclarity-packages/capture/test/: device.test.ts  e2e.live.test.ts  roundtrip.test.ts  shadow.test.ts
unclarity-packages/core/: .gitignore  package-lock.json  package.json  tsconfig.json
unclarity-packages/core/src/: bundle.ts  canary.ts  clarity-provider.ts  cli.ts  device-profile.ts  dom-host.ts  geometry.ts  index.ts  prng.ts  realism.ts  run.ts  runner.ts  scenario.ts  shims.ts  socks.ts  transport.ts  util.ts  version.ts  virtual-clock.ts
unclarity-packages/core/test/: bundle.test.ts  canary.test.ts  determinism.test.ts  device-profile.test.ts  e2e.live.test.ts  identity.test.ts  parity.test.ts  provider.test.ts  realism.test.ts  run.test.ts  session.test.ts  socks.test.ts  virtual-clock.test.ts
